<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ba05b"
    tools:context=".TemperaturaActivity">

    <TextView
        android:id="@+id/txtgraus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="583dp"
        android:text="@string/txtgraus"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txttemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="105dp"
        android:text="@string/txttemperatura"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtgraus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btngerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btngerar"
        android:textColor="#7B9F5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imgterra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:contentDescription="terra"
        app:layout_constraintBottom_toTopOf="@+id/btngerar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/Terra"
        tools:ignore="HardcodedText,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>