<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ba05b"
    tools:context=".desenvolvimentoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="302dp"
        android:layout_height="262dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reciclagem"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtdesenvolvimento"
        android:layout_width="398dp"
        android:layout_height="196dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtdesenvolvimento"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <Button
        android:id="@+id/btnparte2"
        android:layout_width="222dp"
        android:layout_height="67dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/btnparte2"
        android:fontFamily="sans-serif-medium"
        android:onClick="Fim"
        android:text="@string/btnparte2"
        android:textColor="#7B9F5B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:onClick="Mapa"
        android:text="@string/btnMapa"
        android:textColor="#2E7D32"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnparte2" />
</androidx.constraintlayout.widget.ConstraintLayout>