<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/muitacor"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/txtbv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtbv"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txttextobv"
        android:layout_width="363dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="93dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txttextobv"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbv" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="81dp"
        android:backgroundTint="#57AE33"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnlogin"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="245dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="245dp"
        android:layout_height="72dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttextobv" />

</androidx.constraintlayout.widget.ConstraintLayout>